<resources>
    <string name="app_name">SimpleMall</string>
    <string name="home">主页</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="hot">热卖</string>
    <string name="mine">我的</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="hot_activities">热门活动</string>
    <string name="by_now">立即购买</string>
    <string name="total">合计</string>
    <string name="account">去结算</string>
    <string name="delete">删除</string>
    <string name="longin">登陆</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="login">登 录</string>
    <string name="register_account">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="to_login">点击登陆</string>
    <string name="my_orders">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_addresses">我的地址</string>
    <string name="my_msg">我的信息</string>
    <string name="logout">退出登陆</string>
    <string name="password_hint">请输入密码</string>
    <string name="create_order">创建订单</string>
    <string name="china">中国</string>
    <string name="country_or_area">国家或者地区</string>
    <string name="_86">+86</string>
    <string name="please_input_phone_num">请输入常用手机号码</string>
    <string name="password">密码</string>
    <string name="copyright">点击‘下一步’ 按钮，表示你同意《菜鸟窝用户协议》</string>
    <string name="next">下一步</string>
    <string name="smssdk_resend_identify_code">从新获取验证码</string>
    <string name="verification_hint">请输入验证码</string>
</resources>
