<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:orientation="vertical">

    <com.zfy.simplemall.widget.SearchToolBar
        android:id="@+id/search_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="35dp"
        app:isShowSearchView="false"
        app:leftButtonIcon="@drawable/icon_back_32px"
        app:title="@string/longin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_view_block"
        android:orientation="vertical"
        android:padding="@dimen/largePadding"
        >

        <com.zfy.simplemall.widget.ClearEditText
            android:id="@+id/id_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_telphone_32"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textSize="16sp"
            />


        <com.zfy.simplemall.widget.ClearEditText
            android:id="@+id/id_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/icon_lock"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="16sp"
            />
    </LinearLayout>


    <Button
        android:id="@+id/id_btn_login"
        style="@style/bigRedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/largePadding">

        <TextView
            android:id="@+id/id_tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_account"
            android:textColor="@color/crimson"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/id_tv_forget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/forget_password"
            android:textColor="@color/crimson"
            android:textSize="12sp"
            />

    </LinearLayout>
</LinearLayout>