<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:orientation="vertical">

    <com.zfy.simplemall.widget.SearchToolBar
        android:id="@+id/id_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="35dp"
        app:isShowSearchView="false"
        app:leftButtonIcon="@drawable/icon_back_32px"
        app:title="用户注册(1/2)"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_view_block"
        android:orientation="vertical"
        android:padding="@dimen/largePadding">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/largePadding"
            android:paddingTop="@dimen/largePadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/country_or_area"
                android:textColor="@color/black"
                android:textSize="18sp"
                />


            <TextView
                android:id="@+id/id_tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/china"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </RelativeLayout>

        <View
            style="@style/line_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/largePadding"
            android:paddingTop="@dimen/largePadding">


            <TextView
                android:id="@+id/id_tv_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/_86"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                style="@style/line_horizontal"/>

            <com.zfy.simplemall.widget.ClearEditText
                android:id="@+id/id_et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:hint="@string/please_input_phone_num"
                android:inputType="phone"/>
        </LinearLayout>

        <View
            style="@style/line_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/largePadding"
            android:paddingTop="@dimen/largePadding">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                style="@style/line_horizontal"/>

            <com.zfy.simplemall.widget.ClearEditText
                android:id="@+id/id_et_password"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="@dimen/largePadding"
        android:paddingStart="@dimen/largePadding"
        android:text="@string/copyright"
        android:textColor="@color/border_color"
        android:textSize="12sp"
        />


</LinearLayout>